--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -130,10 +130,10 @@ liip_imagine:
             quality: 75
             filters:
                 thumbnail: { size: [300, 236], mode: outbound }
-        product_one:
-            quality: 75
-            filters:
-                relative_resize: { widen: 250 }
+#        product_one:
+#            quality: 75
+#            filters:
+#                relative_resize: { widen: 250 }
 
 itm_image_preview:
     upload_path: "%upload_path%"
@@ -143,7 +143,7 @@ itm_image_preview:
             Category:
                 image: {formats: [crop_preview, category_main]}
             Product:
-                image: {formats: [crop_preview, product_main, product_one]}
+                image: {formats: [crop_preview, product_main]}
 
 
 itm_file_preview:
