--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -58,6 +58,8 @@ doctrine:
         user:     "%database_user%"
         password: "%database_password%"
         charset:  UTF8
+        options:
+            1002: "SET NAMES 'UTF8' COLLATE 'utf8_unicode_ci'"
         types:
             json: Sonata\Doctrine\Types\JsonType
 
