--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -59,7 +59,7 @@ doctrine:
         password: "%database_password%"
         charset:  UTF8
         options:
-            1002: "SET NAMES 'UTF8' COLLATE 'utf8_unicode_ci'"
+            1002: "SET NAMES 'UTF8'"
         types:
             json: Sonata\Doctrine\Types\JsonType
 
